find bloods by userid and delete blood request
