# src/routes/blood/index.js
@@ -6,4 +6,10 @@ router
   .route("/api/v1/bloods")
   .post(bloodSchema.requestBloodValidation, bloodController.createBloodRequest)
   .get(bloodController.findAllBloodRequest);
+
+router.route("/api/v1/bloods/:id").delete(bloodController.deleteBloodRequest);
+router
+  .route("/api/v1/users/:userId/bloods")
+  .get(bloodController.findUserBloods);
+
 module.exports = router;
